--- a/www/index.html
+++ b/www/index.html
@@ -15,11 +15,12 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="base_controller.js"></script>
     <script type="text/javascript" src="head_controller.js"></script>
+    <script type="text/javascript" src="tuck_arms_controller.js"></script>
     <script type="text/javascript" src="touch_interface.js"></script>
     
     <script type="text/javascript">
       $(document).ready(function() {
-        Pr2TeleopApp.init(BaseController, HeadController, TouchInterface);
+        Pr2TeleopApp.init(BaseController, HeadController, TuckArmsController, TouchInterface);
       });
     </script>
     <style>
@@ -60,6 +61,16 @@
       .key.pressed {
         background: rgba(255, 255, 255, 0.5);
       }
+      .control {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 5px;
+        border: 3px solid #fff;
+        color: #fff;
+        cursor: pointer;
+      }
+      .control.pressed {
+        background: rgba(255, 255, 255, 0.5);
+      }
       @media (max-width: 425px) {
         .key {
           height: 35px;
@@ -67,6 +78,10 @@
         }
         .keyset + .keyset {
           margin-left: 25px;
+        }
+        .control {
+          height: 35px;
+          line-height: 35px;
         }
       }
       @media (min-width: 425px) {
@@ -76,6 +91,10 @@
         }
         .keyset + .keyset {
           margin-left: 50px;
+        }
+        .control {
+          height: 50px;
+          line-height: 50px;
         }
       }
       .key > span {
@@ -117,36 +136,42 @@
     <img id="headimage" />
     <div class="controls">
       <div class="keysetcontainer">
-      <div class="keyset">
-        <span class="label">Driving controls</span>
-        <table class="keys">
-          <tr>
-            <td id="base_ccw" class="key"><span class="circle-ccw">&#8634;</span></td>
-            <td id="base_forward" class="key"><span class="arrow-up">&#8598;</span></td>
-            <td id="base_cw" class="key circle-cw"><span class="circle-ccw">&#8635;</span></td>
-          </tr>
-          <tr>
-            <td id="base_left" class="key"><span class="arrow-left">&#8598;</span></td>
-            <td id="base_backward" class="key"><span class="arrow-down">&#8598;</span></td>
-            <td id="base_right" class="key"><span class="arrow-right">&#8598;</span></td>
-          </tr>
-        </table>
-      </div>
-      <div class="keyset">
-        <span class="label">Head controls</span>
-        <table class="keys">
-          <tr>
-            <td></td>
-            <td id="head_up" class="key"><span class="arrow-up">&#8598;</span></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td id="head_left" class="key"><span class="arrow-left">&#8598;</span></td>
-            <td id="head_down" class="key"><span class="arrow-down">&#8598;</span></td>
-            <td id="head_right" class="key"><span class="arrow-right">&#8598;</span></td>
-          </tr>
-        </table>
-      </div>
+        <div class="keyset">
+          <span class="label">Driving controls</span>
+          <table class="keys">
+            <tr>
+              <td id="base_ccw" class="key"><span class="circle-ccw">&#8634;</span></td>
+              <td id="base_forward" class="key"><span class="arrow-up">&#8598;</span></td>
+              <td id="base_cw" class="key circle-cw"><span class="circle-ccw">&#8635;</span></td>
+            </tr>
+            <tr>
+              <td id="base_left" class="key"><span class="arrow-left">&#8598;</span></td>
+              <td id="base_backward" class="key"><span class="arrow-down">&#8598;</span></td>
+              <td id="base_right" class="key"><span class="arrow-right">&#8598;</span></td>
+            </tr>
+          </table>
+        </div>
+        <div class="keyset">
+          <span class="label">Head controls</span>
+          <table class="keys">
+            <tr>
+              <td></td>
+              <td id="head_up" class="key"><span class="arrow-up">&#8598;</span></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td id="head_left" class="key"><span class="arrow-left">&#8598;</span></td>
+              <td id="head_down" class="key"><span class="arrow-down">&#8598;</span></td>
+              <td id="head_right" class="key"><span class="arrow-right">&#8598;</span></td>
+            </tr>
+          </table>
+        </div>
+        <div class="keyset">
+          <span class="label">Other controls</span>
+          <div class="control" id="tuck_arms">
+            Tuck arms
+          </div>
+        </div>
       </div>
     </div>
   </body>
