Fix counter clockwise arrow.

--- a/www/index.html
+++ b/www/index.html
@@ -142,7 +142,7 @@
             <tr>
               <td id="base_ccw" class="key"><span class="circle-ccw">&#8634;</span></td>
               <td id="base_forward" class="key"><span class="arrow-up">&#8598;</span></td>
-              <td id="base_cw" class="key circle-cw"><span class="circle-ccw">&#8635;</span></td>
+              <td id="base_cw" class="key"><span class="circle-cw">&#8635;</span></td>
             </tr>
             <tr>
               <td id="base_left" class="key"><span class="arrow-left">&#8598;</span></td>
