--- a/www/index.html
+++ b/www/index.html
@@ -130,6 +130,9 @@
         -webkit-transform: rotate(90deg);
         transform: rotate(90deg);
       }
+      #headimage {
+        height: auto;
+      }
     </style>
   </head>
   <body>
