Disable text selection for buttons.

--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,10 @@
         color: #fff;
         font-size: 1.5em;
         cursor: pointer;
+        -ms-user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
       .key.pressed {
         background: rgba(255, 255, 255, 0.5);
@@ -67,6 +71,10 @@
         border: 3px solid #fff;
         color: #fff;
         cursor: pointer;
+        -ms-user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
       .control.pressed {
         background: rgba(255, 255, 255, 0.5);
