--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -144,6 +146,9 @@
     </style>
   </head>
   <body>
+    <div id='help' style="position:absolute; right:0; top:0;"  >
+      <a href="https://github.com/hcrlab/rws_pr2_teleop/wiki" style="color:white" target="_blank">Help</a>
+    </div>
     <img id="headimage" />
     <div class="controls">
       <div class="keysetcontainer">
