Use ros_web_video instead of web_video_server.

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -141,6 +139,7 @@
         transform: rotate(90deg);
       }
       #headimage {
+        width: 100%;
         height: auto;
       }
     </style>
@@ -149,7 +148,7 @@
     <div id='help' style="position:absolute; right:0; top:0;"  >
       <a href="https://github.com/hcrlab/rws_pr2_teleop/wiki" style="color:white" target="_blank">Help</a>
     </div>
-    <img id="headimage" />
+    <video id="headimage" autoplay="true" preload="none"></video>
     <div class="controls">
       <div class="keysetcontainer">
         <div class="keyset">
